--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "src/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "hooks",
+    "plugins"
   ],
   "compileOnSave": false,
   "atom": {
